--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
   }
 }
 .car {
-  width: 400px;
+  width: 10rem;
   left: 50%;
   bottom: 100px;
   transform: translateX(-50%);
@@ -71,22 +71,22 @@
 }
 .wheel {
   left: 50%;
-  bottom: 178px;
+  bottom: 8rem;
   transform: translateX(-50%);
   position: absolute;
   z-index: 2;
 }
 .wheel img {
-  width: 72px;
-  height: 72px;
+  width: 23px;
+  height: 23px;
   animation: wheel 1s linear infinite;
 }
 .back-wheel {
-  left: -165px;
+  left: -65px;
   position: absolute;
 }
 .front-wheel {
-  left: 80px;
+  left: 35px;
   position: absolute;
 }
 
@@ -95,7 +95,7 @@
     transform: rotate(360deg);
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 320px) {
   .car {
     width: 200px;
   }
